--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+calamine = "0.24.0"
 chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive", "cargo"] }
+either = "1.11.0"
+glob = "0.3.1"
 imap = { git = "https://github.com/jonhoo/rust-imap", default-features = false, features = ["rustls-tls"] }
 mailparse = "0.14.1"
+polars = { version = "0.39.2", features = ["lazy", "dtype-struct", "parquet"] }
