--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,10 @@ chrono = "0.4.38"
 clap = { version = "4.5.4", features = ["derive", "cargo"] }
 either = "1.11.0"
 glob = "0.3.1"
+# Needed to use rustls
 imap = { git = "https://github.com/jonhoo/rust-imap", default-features = false, features = ["rustls-tls"] }
 lazy_static = "1.4.0"
 mailparse = "0.14.1"
-polars = { version = "0.39.2", features = ["lazy", "dtype-struct", "parquet"] }
+polars = { version = "0.38.3", features = ["lazy", "dtype-struct", "parquet"] }
+# incomaptile with newer versions of polars
+polars_excel_writer = { git = "https://github.com/jmcnamara/polars_excel_writer" }
