--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ glob = "0.3.1"
 imap = { git = "https://github.com/jonhoo/rust-imap", default-features = false, features = ["rustls-tls"] }
 lazy_static = "1.4.0"
 mailparse = "0.14.1"
-polars = { version = "0.38.3", features = ["lazy", "dtype-struct", "parquet", "dtype-date", "strings"] }
-# incomaptile with newer versions of polars
-polars_excel_writer = { git = "https://github.com/jmcnamara/polars_excel_writer" }
+plotlars = "0.3.1"
+polars = { version = "0.42.0", features = ["lazy", "dtype-struct", "parquet", "dtype-date", "strings"] }
+polars_excel_writer = { version = "0.8.0" }
 
 [build-dependencies]
 clap = { version = "4.5.4", features = ["derive", "cargo"] }
